--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 
   <!-- Scripts at the end avoid need for dealing with async, defer, or onload event handlers -->
-  <!-- Load the d3.js library( version 7 minified) -->
-  <!-- Load the line.js file -->
+  <!-- Load the d3.js library (version 7 minified) -->
+  <!-- Load the linechart.js file -->
 </body>
 
 </html>
